--- a/index.css
+++ b/index.css
@@ -13,12 +13,6 @@
     margin: 0 auto;
   }
 
-  .container-column {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
   .main-image {
     max-width: 400px;
     height: auto;
@@ -38,19 +32,42 @@
     padding-left: 70px;
   }
 
+  .section {
+    padding: 0% 10% 5%; /* Add space around content */
+    max-width: 80%; /* Limit section width */
+    font-family: Ubuntu;
+  }
 
-  .buttons {
-    display: flex;
-    width: 80%;
-    justify-content: center;
-    gap: 30px;
-    
+  .section h2 {
+    color: #2F3A60;
+    font-size: 46px;
+    font-weight: 700;
+    margin-bottom: 20px;
+    text-align: left;
   }
-  .button {
-    width: 65px;
-    height: 65px;
-    opacity: 0.65;
+  
+  .section p,
+  .section ul {
+    color: #545E78;
+    font-size: 28px;
+    line-height: 1.6;
+    margin-left: 5%;
   }
+  
+  .section ul li {
+    margin-bottom: 10px;
+  }
+  
+  .section a {
+    color: #5f6579; /* Accent color */
+    text-decoration: none;
+    font-weight: bold;
+  }
+  
+  .section a:hover {
+    text-decoration: underline;
+  }
+  
 
 
 /* Mobile-specific styles */
@@ -99,31 +116,7 @@
         line-height: 1.5;
         margin-bottom: 20px;
     }
-
-    .buttons {
-        width: 100%;
-        justify-content: center;
-        gap: 20px;
-        margin-top: 20px;
-    }
-
-    .button {
-        width: 50px;
-        height: 50px;
-    }
 }
-
-
-
-  .button img {
-    width: inherit;
-    height: inherit;
-  }
-
-  .button:hover {
-    transform: scale(1.1);
-    opacity: 1;
-  }
   
   .text h1 {
     color: #2F3A60;
